# Web2Pic

./: CMakeLists.txt
Web2Pic/: CMakeLists.txt  main.cpp
Web2Pic/FrontEnd/: CMakeLists.txt  webwindow.cpp  webwindow.h  webwindow.ui
